2003-04-23  James Gallagher  <jimg@dcz.dods.org>

	* Merged with 3.3.1.

	* Removed README-ml.

2003-02-10    <jimg@dcz.dods.org>

	* Made release 3.3.0.

	* Merged with release-3-2-6.

2002-05-10    <jimg@dcz.dods.org>

	* MATArray.cc (read), MatLabUtil.cc : Replaced calls t
	string::data with string::c_str. 

2002-04-25  Ethan Davis  <edavis@ucar.edu>
       * Makefile.in: changed value of basedir variable from "math-dods"
       to "mat-dods"

2002-04-05    <jimg@dcz.dods.org>

	* INSTALL (IMPORTANT NOTE): Added text about LD_LIBRARY_PATH.
	(SUPPORTED VERSIONS): The build is now set for ML 6. ML 5 requires
	some hand editing.

	* Makefile.in (configure): Fixed configure: target.

2002-04-05  Ethan Davis  <edavis@ucar.edu>

	* Changed include of "mat.h" to <mat.h> in MATArray.cc and
	MatLabUtil.cc so Matlab include files won't appear in Makefile.in
	dependencies list.


2001-06-19  James Gallagher  <jimg@dcz.dods.org>

	* Merged with release-3-2 head (tagged release-3-2-1). The next
	merge should use update -j release-3-2-1 -j release-3-2.

	* Moved CVS Logs to the end of each file.
	Added code to handle exceptions thrown by the dap library.
	Added exceptions to the read methods.
	Changed the definition of the read methods to match the dap library.

	* Added text about Linux build versions

	* added note about perl modules (tom)

1999-11-04  James Gallagher  <jimg@dcz.dods.org>

	* Merged: cvs update -j release-3-1-0 -j release-3-1, the next
	merge should use -j release-3-1-1 -j release-3-1.

	* Changes for the new Makefile/configure scheme.

	* Fixed a string class bug: data() --> c_str() (Ethan).

1999-05-28  James Gallagher  <jimg@dcz.dods.org>

	* Merge with alpha-3-0-0

1999-05-25  James Gallagher  <jimg@dcz.dods.org>

	* Added security fixes for the nph-mat.in script.

1999-05-05  James Gallagher  <jimg@dcz.dods.org>

	* Added test-coverage target to Makefile.in

1999-03-29  James Gallagher  <jimg@dcz.dods.org>

	* Added stubs for the new type classes.
