@@ -9,7 +9,7 @@
 
 #include "config_mat.h"
 
-static char rcsid[] not_used ={"$Id: MATArray.cc,v 1.9 2003/02/10 22:42:05 jimg Exp $"};
+static char rcsid[] not_used ={"$Id: MATArray.cc,v 1.10 2003/12/08 18:09:05 edavis Exp $"};
 
 #ifdef __GNUG__
 #pragma implementation
@@ -141,6 +141,9 @@ MATArray::read(const string &dataset)
 }
 
 // $Log: MATArray.cc,v $
+// Revision 1.10  2003/12/08 18:09:05  edavis
+// Merge release-3-4 into trunk
+//
 // Revision 1.9  2003/02/10 22:42:05  jimg
 // Merged with 3.2.6.
 //
