@@ -33,6 +33,9 @@ public:
 
 /* 
  * $Log: MATByte.h,v $
+ * Revision 1.5  2003/12/08 18:09:05  edavis
+ * Merge release-3-4 into trunk
+ *
  * Revision 1.4  2003/02/10 22:42:05  jimg
  * Merged with 3.2.6.
  *
