@@ -32,6 +32,9 @@ public:
 
 /* 
  * $Log: MATSequence.h,v $
+ * Revision 1.7  2003/12/08 18:09:05  edavis
+ * Merge release-3-4 into trunk
+ *
  * Revision 1.6  2003/02/10 22:42:05  jimg
  * Merged with 3.2.6.
  *
