@@ -2,7 +2,7 @@
 dnl -*- m4 -*-
 dnl Process this file with autoconf to produce a configure script.
 
-AC_REVISION($Id: configure.in,v 1.15 2003/05/14 22:45:58 jimg Exp $)
+AC_REVISION($Id: configure.in,v 1.16 2003/12/08 18:09:05 edavis Exp $)
 AC_INIT(MATArray.cc)
 AC_CONFIG_HEADER(config_mat.h)
 AC_CONFIG_AUX_DIR(../../etc)
