@@ -1,3 +1,8 @@
+2003-12-08  Yuan Ho  <yuanho@ucar.edu>
+
+        * Merge release-3-4 into trunk.
+
+
 2003-04-23  James Gallagher  <jimg@dcz.dods.org>
 
 	* Merged with 3.3.1.
@@ -85,5 +90,5 @@ Tue Dec 30 15:59:46 1997  James Gallagher  <jimg@localhost>
 	class. This corrects problems with those program and the
 	DODS_Dispatch perl class.
 
-$Id: ChangeLog,v 1.10 2003/04/24 00:48:50 jimg Exp $
+$Id: ChangeLog,v 1.11 2003/12/08 18:09:05 edavis Exp $
 
